--- a/independence day/style.css
+++ b/independence day/style.css
@@ -117,9 +117,17 @@ main {
 }
 
 #events-list ul {
-    margin: 0;
+    list-style-type: style=none; /* Remove default bullets */
     padding: 0;
-    list-style-type: disc;
+    margin-right: 15px;
+    border-radius: 8px;
+}
+.flag-image{
+    width: 300px; /* Adjust width to fit better */
+    height: auto;
+    border-radius: 8px;
+    margin-right: 15px;
+    
 }
 
 .hidden {
